Copy posts from old site, header foot changes

--- a/themes/smol/layouts/partials/footer.html
+++ b/themes/smol/layouts/partials/footer.html
@@ -1,7 +1,9 @@
 <footer>
-	<p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}"><b>{{ if .Site.Copyright }}{{ .Site.Copyright }}{{ else }}{{ .Site.Title }}{{ end }}</b></a>.
+
+	<span>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}"><b>{{ if .Site.Copyright }}{{ .Site.Copyright }}{{ else }}{{ .Site.Title }}{{ end }}</b></a>.
 	{{- range .Site.Menus.footer }}
 	<a href="{{ .URL }}"><b>{{ .Name }}</b></a>.
         {{- end }}
-	</p>
+	</span>
+	<span><a href="https://hey-adora.tumblr.com/post/169039127437/yinx-read-a-girl-who-dates-books"><b>Tagline credit.</b></a></span>
 </footer>
