--- a/themes/smol/layouts/partials/header.html
+++ b/themes/smol/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
-	{{ strings.Repeat ( .Site.Title | len | add 6 ) "=" }}<br>
-	== <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a> ==<br>
-	{{ strings.Repeat ( .Site.Title | len | add 6 ) "=" }}
+	{{ strings.Repeat ( .Site.Title | len | add 8 ) "=" }}<br>
+	==💜<a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>💜==<br>
+	{{ strings.Repeat ( .Site.Title | len | add 8 ) "=" }}
 	<div style="float: right;">{{ .Site.Params.subtitle }}</div><br>
 	<p>
 	<nav>
