--- a/themes/smol/layouts/_default/list.html
+++ b/themes/smol/layouts/_default/list.html
@@ -9,11 +9,11 @@
 		{{ end }}
 		
 		<ul>
-		    {{ range .Paginator.Pages }}
+		    {{ range (.Paginator 50).Pages }}
 		    <li>
 		        <div class="post-title">
 				{{ if eq $listtitle "Posts" }}
-				    {{ .Date.Format "01-02-2006" }} <a href="{{ .RelPermalink }}">{{.Title }}</a>
+					{{ .Date.Format "01-02-2006" }} <a href="{{ .RelPermalink }}">{{.Title }}</a>
 				{{ else }}
 				    <a href="{{ .RelPermalink }}">{{.Title }}</a>
 				{{ end }}
