--- a/themes/smol/layouts/partials/pagination.html
+++ b/themes/smol/layouts/partials/pagination.html
@@ -1,9 +1,9 @@
 <div class="pagination">
 {{ if .Paginator.HasPrev }}
-	<a href="{{ .Paginator.Prev.URL }}">Previous Page</a>
+	<a href="{{ .Paginator.Prev.URL }}">Previous page</a>
 {{ end }}
 {{ .Paginator.PageNumber }} of {{ .Paginator.TotalPages }}
 {{ if .Paginator.HasNext }}
-	<a href="{{ .Paginator.Next.URL }}">Next Page</a>
+	<a href="{{ .Paginator.Next.URL }}">Next page</a>
 {{ end }}
 </div>
