--- a/themes/smol/layouts/_default/single.html
+++ b/themes/smol/layouts/_default/single.html
@@ -4,7 +4,7 @@
 			<h1>{{ .Title }}</h1>
 			<b><time>{{ .Date.Format (default "01-02-2006" .Site.Params.dateFmt) }}</time></b>
 		       {{ range .Params.tags }}
-		           <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+		           <a class='tags' href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
         	       {{ end }}
 
 			<div>
