--- a/themes/smol/layouts/_default/summary.html
+++ b/themes/smol/layouts/_default/summary.html
@@ -2,7 +2,8 @@
 	<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
 	<b><time>{{ .Date.Format (default "01-02-2006" .Site.Params.dateFmt) }}</time></b>
 	{{ range .Params.tags }}
-	<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+	<a class="tags" href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">
+	{{ . }}</a>
 	{{ end }}
 	<div>
 		{{ .Summary }}
