--- a/themes/smol/layouts/partials/header.html
+++ b/themes/smol/layouts/partials/header.html
@@ -5,10 +5,10 @@
 	<div style="float: right;">{{ .Site.Params.subtitle }}</div><br>
 	<p>
 	<nav>
-			<a href="/"><b>Home</b></a>.
+			<a class='header'href="/"><b>Home</b></a>.
 			{{ with .Site.Menus.main }}
 			{{ range . }}
-			<a href="{{ .URL | relURL }}"><b>{{ .Name }}</b></a>.
+			<a class='header' href="{{ .URL | relURL }}"><b>{{ .Name }}</b></a>.
 			{{ end }}
 	</nav>
 	</p>
