Add boop 3, update summary styles

--- a/themes/smol/layouts/_default/summary.html
+++ b/themes/smol/layouts/_default/summary.html
@@ -6,7 +6,7 @@
 	{{ . }}</a>
 	{{ end }}
 	<div>
-		{{ .Summary }}
+		<div class="summary">{{ .Summary }}</div>
 		{{ if .Truncated }}
 			<a href="{{ .Permalink }}">Read more...</a>
 		{{ end }}
