Add boops and show post summaries on  individual tag pages

--- a/themes/smol/layouts/_default/list.html
+++ b/themes/smol/layouts/_default/list.html
@@ -14,8 +14,11 @@
 		        <div class="post-title">
 				{{ if eq $listtitle "Posts" }}
 					{{ .Date.Format "01-02-2006" }} <a href="{{ .RelPermalink }}">{{.Title }}</a>
+				{{ else if eq $listtitle "Tags" }}
+				<a href="{{ .RelPermalink }}">{{.Title }}</a>
 				{{ else }}
-				    <a href="{{ .RelPermalink }}">{{.Title }}</a>
+					<h3>{{ .Date.Format "01-02-2006" }} <a href="{{ .RelPermalink }}"><b>{{.Title }}</b></a></h3>
+					<p>{{ .Summary }}</p>
 				{{ end }}
 		        </div>
 		    </li>
