--- a/themes/smol/layouts/index.html
+++ b/themes/smol/layouts/index.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
 	<main>
-		<p class="banner"><a href="/series/nose-boop/">CHECK OUT THE BIG SALE! EVERYTHING MUST GO :)</a></p>
+		<a href="/series/nose-boop/">
+			<p class="banner">CHECK OUT THE BIG SALE! EVERYTHING MUST GO :)</p>
+		</a>
 		{{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
 		{{ range $paginator.Pages }}
 		{{ .Render "summary" }}
